# monorepo

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MONOREPO.md  README.md  claude.sh
.claude/: README.md  mcp.json  settings.json
.claude/hooks/: check-plugins.sh  enforce-app-build.sh  enforce-tools.sh
.github/workflows/: sync-subtrees.yml
app/: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  electron-builder.yml  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/e2e/: app-lifecycle.e2e.ts  auth-flow.e2e.ts  deep-links.e2e.ts  messaging.e2e.ts  playwright.config.ts  realtime-sync.e2e.ts  render-pipeline.e2e.ts  room-crud.e2e.ts  tabs-panels.e2e.ts  tray-window.e2e.ts  tsconfig.json  widget-sdk.e2e.ts
app/electron/: auth.ts  daemon.ts  main.ts  preload.ts  tray.ts  tsconfig.json
app/scripts/: bundle-python.sh
docs/: .gitignore  CHANGELOG-v0.9.5.md  CHANGELOG-v0.9.6.1.md  CHANGELOG-v0.9.6.md  CLAUDE.md  README.md
ezagent/: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
ezagent/crates/ezagent-backend/: Cargo.toml
ezagent/crates/ezagent-backend/src/: lib.rs  persistence.rs  traits.rs  yrs_backend.rs  zenoh_backend.rs
ezagent/crates/ezagent-backend/tests/: p2p_tests.rs  sync_tests.rs
ezagent/crates/ezagent-cli/: Cargo.toml
ezagent/crates/ezagent-cli/src/: config.rs  exit_codes.rs  main.rs  output.rs
ezagent/crates/ezagent-cli/src/commands/: common.rs  events.rs  identity.rs  init.rs  message.rs  mod.rs  open.rs  room.rs  start.rs  status.rs
ezagent/crates/ezagent-cli/tests/: cli_events.rs  cli_exit_codes.rs  cli_init.rs  cli_message.rs  cli_open.rs  cli_room.rs  cli_start.rs  cli_status.rs
ezagent/crates/ezagent-engine/: Cargo.toml
ezagent/crates/ezagent-engine/src/: annotation.rs  engine.rs  error.rs  events.rs  lib.rs  loader.rs  operations.rs  store.rs  sync.rs  uri_registry.rs
ezagent/crates/ezagent-engine/src/builtins/: identity.rs  message.rs  mod.rs  room.rs  timeline.rs
ezagent/crates/ezagent-engine/src/hooks/: executor.rs  mod.rs  phase.rs
ezagent/crates/ezagent-engine/src/index/: mod.rs  refresh.rs
ezagent/crates/ezagent-engine/src/registry/: datatype.rs  dependency.rs  mod.rs
ezagent/crates/ezagent-engine/tests/: extension_interaction_tests.rs  extension_loader_tests.rs  hook_pipeline_tests.rs
ezagent/crates/ezagent-ext-api/: Cargo.toml
ezagent/crates/ezagent-ext-api/src/: context.rs  error.rs  lib.rs  manifest.rs
ezagent/crates/ezagent-ext-channels/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-channels/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-collab/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-collab/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-command/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-command/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-cross-room-ref/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-cross-room-ref/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-drafts/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-drafts/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-link-preview/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-link-preview/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-media/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-media/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-moderation/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-moderation/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-mutable/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-mutable/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-presence/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-presence/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-profile/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-profile/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-reactions/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-reactions/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-receipts/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-receipts/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-reply-to/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-reply-to/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-runtime/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-runtime/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-test-dummy/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-test-dummy/src/: lib.rs
ezagent/crates/ezagent-ext-threads/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-threads/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-ext-watch/: Cargo.toml  manifest.toml
ezagent/crates/ezagent-ext-watch/src/: hooks.rs  lib.rs
ezagent/crates/ezagent-protocol/: Cargo.toml
ezagent/crates/ezagent-protocol/src/: crypto.rs  entity_id.rs  envelope.rs  error.rs  key_pattern.rs  lib.rs  sync.rs
ezagent/crates/ezagent-py/: Cargo.toml
ezagent/crates/ezagent-py/src/: engine_bridge.rs  lib.rs
ezagent/fixtures/ezagent/room/R-minimal/config/: state.json
ezagent/fixtures/keypairs/: alice.json  bob.json
ezagent/python/ezagent/: __init__.py  server.py
ezagent/tests/python/: test_engine_bridge.py  test_http_api.py  test_http_auth.py  test_http_errors.py  test_http_scaffold.py  test_http_ws.py  test_pyo3_bridge.py
page/: CLAUDE.md  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
relay/: CLAUDE.md  Cargo.toml  relay.example.toml
relay/crates/relay-bin/: Cargo.toml
relay/crates/relay-bin/src/: admin.rs  main.rs  metrics.rs
relay/crates/relay-bin/tests/: admin_integration.rs  blob_integration.rs  ident_integration.rs  quota_integration.rs  store_integration.rs
relay/crates/relay-blob/: Cargo.toml
relay/crates/relay-blob/src/: gc.rs  lib.rs  stats.rs  store.rs
relay/crates/relay-bridge/: Cargo.toml
relay/crates/relay-bridge/src/: acl.rs  federation.rs  lib.rs  persist.rs  router.rs  sync.rs
relay/crates/relay-core/: Cargo.toml
relay/crates/relay-core/src/: config.rs  entity.rs  error.rs  identity.rs  lib.rs  quota.rs  storage.rs
(+260 files in other folders)
