[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "ezagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
]

[tool.maturin]
manifest-path = "crates/ezagent-py/Cargo.toml"
python-source = "python"
module-name = "ezagent._native"

[tool.pytest.ini_options]
asyncio_mode = "auto"
