[workspace]
resolver = "2"
members = [
    "crates/relay-core",
    "crates/relay-bridge",
    "crates/relay-blob",
    "crates/relay-bin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
uuid = { version = "1", features = ["v7", "serde"] }
yrs = { version = "0.21", features = ["sync"] }
zenoh = "1.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
rocksdb = "0.22"
tempfile = "3"
axum = "0.7"
tower = "0.5"
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.13"
base64 = "0.22"
ezagent-protocol = { path = "../ezagent/crates/ezagent-protocol" }
relay-core = { path = "crates/relay-core" }
relay-bridge = { path = "crates/relay-bridge" }
relay-blob = { path = "crates/relay-blob" }
