[package]
name = "ezagent-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EZAgent backend abstraction — CrdtBackend + NetworkBackend traits with yrs/Zenoh implementations"

[dependencies]
ezagent-protocol = { workspace = true }
yrs = { workspace = true }
zenoh = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
base64 = { workspace = true }
