[package]
name = "ezagent-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EZAgent Bus Engine — Datatype Registry, Hook Pipeline, Built-in Datatypes"

[dependencies]
ezagent-protocol = { workspace = true }
ezagent-backend = { workspace = true }
ezagent-ext-api = { workspace = true }
yrs = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
ulid = { workspace = true }
libloading = { workspace = true }
toml = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
