[package]
name = "ezagent-ext-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EZAgent Extension Plugin API — C ABI entry points and safe Rust wrapper"

[dependencies]
ezagent-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
