[package]
name = "ezagent-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EZAgent shared protocol types"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
