[package]
name = "ezagent-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
ezagent-protocol = { workspace = true }
ezagent-backend = { workspace = true }
ezagent-engine = { workspace = true }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
yrs = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
