[package]
name = "relay-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
rocksdb = { workspace = true }
chrono = { workspace = true }
ezagent-protocol = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }
